--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   provider: ^4.3.2+3
   flutter_riverpod: ^0.12.1
 
+  firebase_core: ^0.5.3
+  cloud_firestore: ^0.14.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
