--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   provider: ^4.3.2+3
   flutter_riverpod: ^0.12.1
 
-  firebase_core: ^0.5.3
-  cloud_firestore: ^0.14.4
+  firebase_core: ^0.7.0
+  cloud_firestore: ^0.16.0
+  firebase_auth: ^0.20.0+1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
