--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   firebase_core: ^0.7.0
   cloud_firestore: ^0.16.0
   firebase_auth: ^0.20.0+1
+  # for version solving error
+  # https://firebase.flutter.dev/docs/migration/
+  firebase_messaging: ^8.0.0-dev.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
